# hwinfo

./: .clang-format  CMakeLists.txt  README.md
examples/: example.cpp
include/hwinfo/: PCIMapper.hpp  battery.h  battery.hpp  cpu.h  cpu.hpp  disk.h  disk.hpp  gpu.h  gpu.hpp  hwinfo.h  hwinfo.hpp  mainboard.hpp  os.hpp  ram.hpp
include/hwinfo/apple/: battery.h  battery.hpp  batteryApple.hpp  cpu.h  cpuApple.hpp  diskApple.hpp  gpuApple.hpp  mainboard.hpp  osApple.hpp  ram.hpp
include/hwinfo/apple/utils/: filesystem.hpp
include/hwinfo/base/: battery.h  battery.hpp  batteryBase.hpp  cpu.h  cpuBase.hpp  disk.h  diskBase.hpp  gpu.h  gpu.hpp  gpuBase.hpp  mainboard.h  mainboard.hpp  mainboardBase.hpp  osBase.hpp  ramBase.hpp
include/hwinfo/linux/: battery.h  battery.hpp  batteryLinux.hpp  cpu.h  cpu.hpp  cpuLinux.hpp  disk.h  disk.hpp  diskLinux.hpp  gpu.h  gpu.hpp  gpuLinux.hpp  mainboard.h  mainboard.hpp  mainboardLinux.hpp  os.h  os.hpp  osLinux.hpp  ramLinux.hpp
include/hwinfo/linux/utils/: filesystem.h  filesystem.hpp
include/hwinfo/utils/: filesystem.h  filesystem.hpp  stringutils.hpp
include/hwinfo/windows/: battery.h  battery.hpp  batteryWin.hpp  cpu.h  cpu.hpp  cpuWin.hpp  disk.h  disk.hpp  diskWin.hpp  gpu.h  gpu.hpp  gpuWin.hpp  mainboard.h  mainboard.hpp  mainboardWin.hpp  os.h  os.hpp  osWin.hpp  ramWin.hpp
include/hwinfo/windows/utils/: WMIBatteryInfo.hpp  WMIBoardInfo.hpp  WMICpuInfo.hpp  WMIDiskInfo.hpp  WMIGpuInfo.hpp  WMIInterface.hpp  WMIOSInfo.hpp  WMIPerfInfo.hpp  WMIRamInfo.hpp  WMIWrapper.hpp  WMIwrapper.hpp  wmi_wrapper.hpp  wmi_wrapper_2.hpp
